Fix button text overflow on stop buttons

--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -83,3 +83,15 @@ img {
 #currentJourneyHeader:focus {
     text-shadow: 0 2px 4px rgba(145, 92, 182, .4);
 }
+
+button.truncate {
+  display: flex;
+}
+button.truncate span:not(.caret) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+button.truncate .caret {
+  margin: auto;
+}
